--- a/nextjs-app/vercel.json
+++ b/nextjs-app/vercel.json
@@ -3,13 +3,5 @@
   "outputDirectory": ".next",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "framework": "nextjs",
-  "env": {
-    "ASTRO_DOCS_URL": "@astro_docs_url"
-  },
-  "build": {
-    "env": {
-      "ASTRO_DOCS_URL": "@astro_docs_url"
-    }
-  }
+  "framework": "nextjs"
 }
