--- a/astro-docs/netlify.toml
+++ b/astro-docs/netlify.toml
@@ -1,4 +1,5 @@
 [build]
+  base = "astro-docs"
   command = "npm run build"
   publish = "dist"
 
@@ -11,16 +12,3 @@
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Methods = "GET, POST, OPTIONS"
     Access-Control-Allow-Headers = "Content-Type"
-
-# Enable CORS for all routes to allow Next.js to proxy requests
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-
-# Catch-all for SPA behavior if needed
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  conditions = {Role = ["admin"]}
